--- a/assets/scss/_shared.scss
+++ b/assets/scss/_shared.scss
@@ -6,7 +6,11 @@ $gray: rgb(184, 183, 183);
 
 html,
 .root,
-.body,
+body {
+  background-color: $bgcolor;
+  margin: 0;
+  padding: 0;
+}
 .container {
   background-color: $bgcolor;
 }
