--- a/assets/scss/_shared.scss
+++ b/assets/scss/_shared.scss
@@ -3,6 +3,7 @@ $pink: #B25656;
 $dark-pink: #a13838;
 $dark-green: #3B7D75;
 $gray: rgb(184, 183, 183);
+$font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 html,
 .root,
