--- a/assets/scss/_shared.scss
+++ b/assets/scss/_shared.scss
@@ -5,6 +5,32 @@ $dark-green: #3B7D75;
 $gray: rgb(184, 183, 183);
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+::-webkit-scrollbar {
+  width: 1em;
+}
+
+::-webkit-scrollbar-track {
+  background: #312a2d;
+  border-radius: 10px;
+  margin-block: 0.5em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #7a3a3ace;
+  border-radius: 10px;
+  padding: 1px;
+  border: 0.25em solid #312a2d;
+
+  &:hover {
+    background: #c75f5fdc;
+  }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 html,
 .root,
 body {
