--- a/assets/scss/_shared.scss
+++ b/assets/scss/_shared.scss
@@ -16,13 +16,13 @@ $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Ca
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #7a3a3ace;
+  background: $pink;
   border-radius: 10px;
   padding: 1px;
-  border: 0.25em solid #312a2d;
+  border: 0.4em solid #312a2d;
 
   &:hover {
-    background: #c75f5fdc;
+    background: $pink;
   }
 }
 
