--- a/assets/scss/_shared.scss
+++ b/assets/scss/_shared.scss
@@ -22,7 +22,8 @@ $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Ca
   border: 0.4em solid #312a2d;
 
   &:hover {
-    background: $pink;
+    background: #f15353;
+      ;
   }
 }
 
